Fix resource transfer and JPMS config loading; add interop test harness
Verified against Python RNS 1.5.2 over a live link. Resource transfer had
never actually worked; six defects were in the way, none of them reachable
by unit testing.

Resource transfer:

* Resource.watchdogJob() was `synchronized` and loops for the entire
  transfer, so request(), receivePart(), hashmapUpdate() and cancel() —
  all synchronized too — could not run while a transfer was in progress.
  An incoming part request arrived 3ms after the advertisement but did not
  execute until 5.5s later, by which point the resource had timed out and
  been marked FAILED. The reference's watchdog is unsynchronized, guarding
  only its brief critical section with a flag that watchdogLock already
  mirrors. advertiseJob() had the same problem (it waits in a sleep loop).
  This was the blocker: no resource could ever transfer.

* request() did parts.subList(start, start + COLLISION_GUARD_SIZE) where
  COLLISION_GUARD_SIZE is 224. Python list slicing clamps; List.subList
  throws. Every resource with fewer than 224 parts threw on the first part
  request. requestNext() already carried the clamp; request() was missed.

* Packet always used the global 500-byte MTU. A packet bound for a link
  takes that link's negotiated MTU (RNS/Packet.py:154). Latent until link
  MTU discovery began negotiating above 500, after which Resource sliced
  parts at the negotiated SDU and every part was rejected by its own
  sender.

* The resource watchdog busy-spun whenever sleepTime truncated to 0. The
  reference computes float seconds, where exactly zero is vanishingly
  unlikely; whole milliseconds hit it constantly, burning a core for the
  duration of each transfer. Floored at 1ms.

* Byte-array payloads never segmented, so anything past MAX_EFFICIENT_SIZE
  failed. Oversized payloads now spill to a temporary file and take the
  segmented path, as the reference does (RNS/Resource.py:275), via a
  shared readSegment().

*